--- a/TalonsParkourAdventure/app/src/main/res/values/strings.xml
+++ b/TalonsParkourAdventure/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+
+    <string name="title_activity_skins_screen">skins_screen</string>
+
+    <string name="title_activity_fullscreen">AboutScreen</string>
 </resources>
