--- a/TalonsParkourAdventure/app/src/main/res/values/strings.xml
+++ b/TalonsParkourAdventure/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_activity_skins_screen">skins_screen</string>
 
     <string name="title_activity_fullscreen">AboutScreen</string>
+    <string name="about">About</string>
 </resources>
