All screen properly hide navigation.

--- a/TalonsParkourAdventure/app/src/main/res/values/strings.xml
+++ b/TalonsParkourAdventure/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
 
     <string name="title_activity_fullscreen">AboutScreen</string>
     <string name="about">About</string>
+
+    <string name="title_activity_game">GameActivity</string>
 </resources>
